--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html, body {
+    margin: 10px;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+#root {
+    width: inherit;
+    height: inherit;
+}
+
+
+.leaflet-container {
+    width: 600px;
+    height: 300px;
+    margin: 10px;
 }
